--- a/src/hot.html
+++ b/src/hot.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>活动页面</title>
+    <title>分类页面</title>
     <link rel="stylesheet" href="./css/reset .css">
     <link rel="stylesheet" href="./css/common.css">
     <link rel="stylesheet" href="./css/index.css">
@@ -44,7 +44,7 @@
     <!-- logo -->
     <div class="logo-wrap">
         <h1>
-            <a href="#">
+            <a href="index.html">
                 <img src="./images/logo.JPG" alt="">
             </a>
         </h1>
@@ -64,7 +64,7 @@
         <div class="logo_r">
             <div class="logo_rbox">
                 <i class="iconfont icon-gouwuche"></i>
-                <a href="#"> 购物车<span>0</span>件</a>
+                <a href="shoppingCart.html"> 购物车<span>0</span>件</a>
             </div>
         </div>
     </div>
@@ -83,7 +83,7 @@
                         <a>运动休闲服</a><span>&gt;</span>
                         <div class="li_three">
                         </div>
-                    </li>
+                    </li> 
                     <li>
                         <a>跑步</a><span>&gt;</span>
                         <div class="li_three">
@@ -118,11 +118,11 @@
                 </ul>
             </li>
             <li>
-                <a href="#">首页</a>
-                <a href="#">男子运动</a>
-                <a href="#">女子运动</a>
-                <a href="#">儿童</a>
-                <a href="#">配件</a>
+                <a href="index.html" target="_blank">首页</a>
+                <a href="list.html" target="_blank">全部商品</a>
+                <a href="hot.html?goodsType=鞋子" target="_blank">鞋子</a>
+                <a href="hot.html?goodsType=服装" target="_blank">服装</a>
+                <a href="hot.html?goodsType=配件" target="_blank">配件</a>
                 <a href="#">
                     <i class="iconfont icon-weixin"></i>
                     <b>
@@ -474,7 +474,7 @@
     <script src="./js/jquery-3.2.1.min.js"></script>
     <script src="./js/cookieTools.js"></script>
     <script src="./js/common.js"></script>
-    <script src="./js/list.js"></script>
+    <script src="./js/hot.js"></script>
 </body>
 
 </html>
