--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,7 @@
     <!-- logo -->
     <div class="logo-wrap">
         <h1>
-            <a href="#">
+            <a href="index.html">
                 <img src="./images/logo.JPG" alt="">
             </a>
         </h1>
@@ -64,7 +64,7 @@
         <div class="logo_r">
             <div class="logo_rbox">
                 <i class="iconfont icon-gouwuche"></i>
-                <a href="#"> 购物车<span>0</span>件</a>
+                <a href="shoppingCart.html"> 购物车<span>0</span>件</a>
             </div>
         </div>
     </div>
@@ -118,11 +118,11 @@
                 </ul>
             </li>
             <li>
-                <a href="#">首页</a>
-                <a href="#">男子运动</a>
-                <a href="#">女子运动</a>
-                <a href="#">儿童</a>
-                <a href="#">配件</a>
+                <a href="index.html" target="_blank">首页</a>
+                <a href="list.html" target="_blank">全部商品</a>
+                <a href="hot.html?goodsType=鞋子" target="_blank">鞋子</a>
+                <a href="hot.html?goodsType=服装" target="_blank">服装</a>
+                <a href="hot.html?goodsType=配件" target="_blank">配件</a>
                 <a href="#">
                     <i class="iconfont icon-weixin"></i>
                     <b>
